--- a/shipsyapp/src/components/style.css
+++ b/shipsyapp/src/components/style.css
@@ -12,3 +12,56 @@
     
 }
 
+.inputGrp{
+    position: relative;
+    border-bottom: 2px solid #fff;
+    margin-bottom: 3rem;
+}
+
+.form-control{
+    background: none;
+    border: none;   
+    outline: none;
+    padding-block: .7rem; 
+    padding-left: 2rem;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.imputGrp label{
+    position: absolute;
+    top: 0;
+    left: 2.5rem;
+    color: #fff;
+    font-weight: 500;
+    transition: .3s;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+  }
+  
+  .btn-success {
+    background-color: #28a745;
+    border-color: #28a745;
+  }
+  
+
+ul li :hover {
+    background-color: gray;
+}
+
+.employee_image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.emp_det_image {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+
+
